--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,7 +8,7 @@ security:
                 property: 'username'
     encoders:
         Symfony\Component\Security\Core\User\UserInterface:
-            algorithm: bcrypt
+            algorithm: auto
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
