--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ ubuntu-*.log
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
