--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
         "hautelook/alice-bundle": "^2.7",
         "symfony/maker-bundle": "^1.14"
     },
