--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@babel/preset-react": "^7.9.1",
         "@symfony/webpack-encore": "^0.28.2",
         "core-js": "^3.0.0",
         "node-sass": "^4.13.1",
@@ -17,6 +18,9 @@
     },
     "dependencies": {
         "bootstrap": "^4.4.1",
-        "react": "^16.13.1"
+        "prop-types": "^15.7.2",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-router-dom": "^5.1.2"
     }
 }
