--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,6 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
         users:
             entity:
                 class: 'App\Entity\User'
@@ -15,20 +14,10 @@ security:
             security: false
         main:
             anonymous: lazy
-            provider: users_in_memory
-            guard:
-                authenticators:
-                    - App\Security\LoginFormAuthenticator
-            logout:
-                path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            provider: users
+            # https://symfony.com/doc/current/security/json_login_setup.html
+            json_login:
+                check_path: security_login
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
