--- a/fixtures/User.yml
+++ b/fixtures/User.yml
@@ -1,4 +1,4 @@
 App\Entity\User:
     user_{1..5}:
-        username: '<username()>'
+        email: '<username()>\@example.org'
         password: 'test'
