Allow risky rules in cs fixer

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -39,4 +39,5 @@ return PhpCsFixer\Config::create()
         'visibility_required' => ['elements' => ['property', 'method', 'const']],
     ])
     ->setFinder($finder)
+    ->setRiskyAllowed(true)
 ;
