--- a/fixtures/User.yml
+++ b/fixtures/User.yml
@@ -1,4 +1,4 @@
 App\Entity\User:
     user_{1..5}:
-        email: '<username()>\@example.org'
+        email: '<safeEmail()>'
         password: 'test'
