add cs fixer, fix phpstan?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,17 @@ jobs:
         uses: docker://oskarstark/phpstan-ga
         with:
           args: analyse src/ --level=max
+          secrets: "GITHUB_TOKEN"
+
+  php-cs-fixer:
+    name: PHP-CS-Fixer
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: PHPStan
+        uses: docker://oskarstark/php-cs-fixer-ga
+        with:
+          args: --diff --dry-run
+          secrets: "GITHUB_TOKEN"
