--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
