--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: PHPStan
         uses: docker://oskarstark/phpstan-ga
         with:
-          args: analyse src/ --level=max
+          args: analyse -l max -c phpstan.neon /src
           secrets: "GITHUB_TOKEN"
 
   php-cs-fixer:
@@ -42,7 +42,7 @@ jobs:
       - name: PHP-CS-Fixer
         uses: docker://oskarstark/php-cs-fixer-ga
         with:
-          args: --diff --dry-run
+          args: --diff --dry-run --allow-risky=yes
           secrets: "GITHUB_TOKEN"
 
   eslint:
