--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=7f14d3a3121c4c18e1f132c4bea6afa8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root@127.0.0.1:3306/print4health?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://localhost:1025
+###< symfony/mailer ###
