--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "sensio/framework-extra-bundle": "^5.5.3",
         "symfony/console": "^5.0.5",
         "symfony/dotenv": "^5.0.5",
+        "symfony/filesystem": "5.0.*",
         "symfony/flex": "^1.6.2",
         "symfony/framework-bundle": "^5.0.5",
         "symfony/mailer": "5.0.*",
@@ -21,6 +22,7 @@
         "symfony/property-info": "^5.0.5",
         "symfony/security-bundle": "^5.0.5",
         "symfony/serializer": "^5.0.5",
+        "symfony/string": "5.0.*",
         "symfony/twig-bundle": "^5.0.5",
         "symfony/validator": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7.3",
