--- a/fixtures/Thing.yml
+++ b/fixtures/Thing.yml
@@ -2,3 +2,5 @@ App\Entity\Thing:
     thing_{1..20}:
         __construct:
             - '<word()>'
+        fileUrl: 'https://devpost.com/software/print4health'
+        image: '@image_*'
