--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,13 @@ jobs:
         with:
           args: --diff --dry-run
           secrets: "GITHUB_TOKEN"
+
+  eslint:
+    name: eslint
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: ESLint Action
+        uses: hallee/eslint-action@1.0.1
