--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,12 @@
         "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "ext-json" : "*",
+        "ext-json": "*",
         "doctrine/annotations": "^1.8.0",
         "doctrine/doctrine-bundle": "^2.0.7",
         "doctrine/doctrine-migrations-bundle": "^2.1.2",
         "doctrine/orm": "^2.7.1",
+        "nelmio/api-doc-bundle": "^3.6",
         "phpdocumentor/reflection-docblock": "^4.3.4",
         "ramsey/uuid": "^3.9.3",
         "sensio/framework-extra-bundle": "^5.5.3",
@@ -26,9 +27,9 @@
         "symfony/validator": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7.3",
         "symfony/yaml": "^5.0.5",
+        "theofidry/alice-data-fixtures": "1.1.2",
         "twig/extra-bundle": "^3.0.3",
-        "twig/twig": "^3.0.3",
-        "theofidry/alice-data-fixtures" : "1.1.2"
+        "twig/twig": "^3.0.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16.1",
