--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,8 @@ jobs:
     name: eslint
     runs-on: ubuntu-18.04
     steps:
-      -   uses: actions/checkout@v1
-      -   uses: stefanoeb/eslint-action@1.0.2
-          with:
-            files: assets/js
+      -   name: Checkout code
+          uses: actions/checkout@v2
+
+      -   name: eslint
+          uses: stefanoeb/eslint-action@1.0.2
