--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "symfony/webpack-encore-bundle": "^1.7.3",
         "symfony/yaml": "^5.0.5",
         "twig/extra-bundle": "^3.0.3",
-        "twig/twig": "^3.0.3"
+        "twig/twig": "^3.0.3",
+        "theofidry/alice-data-fixtures" : "1.1.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16.1",
