--- a/fixtures/Order.yml
+++ b/fixtures/Order.yml
@@ -1,6 +1,6 @@
 App\Entity\Order:
-    order_{1..5}:
+    order_{1..20}:
         __construct:
             - '@user_*'
-            - '@thing_manual_*'
+            - '@thing_*'
             - '<numberBetween(5, 5000)>'
