--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dependencies": {
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
+        "jquery": "^3.4.1",
+        "popper.js": "^1.16.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
