--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,13 @@
         "twig/twig": "^3.0.3"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.3",
         "friendsofphp/php-cs-fixer": "^2.16.1",
         "hautelook/alice-bundle": "^2.7.2",
         "nelmio/api-doc-bundle": "^3.6",
-        "symfony/maker-bundle": "^1.14.6"
+        "symfony/browser-kit": "5.0.*",
+        "symfony/maker-bundle": "^1.14.6",
+        "symfony/phpunit-bridge": "^5.0"
     },
     "config": {
         "preferred-install": {
