--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
         "symfony/dotenv": "^5.0.5",
         "symfony/flex": "^1.6.2",
         "symfony/framework-bundle": "^5.0.5",
-        "symfony/mailer": "5.0.*",
+        "symfony/mailer": "^5.0.5",
         "symfony/property-access": "^5.0.5",
         "symfony/property-info": "^5.0.5",
         "symfony/security-bundle": "^5.0.5",
         "symfony/serializer": "^5.0.5",
         "symfony/twig-bundle": "^5.0.5",
-        "symfony/validator": "5.0.*",
+        "symfony/validator": "^5.0.5",
         "symfony/webpack-encore-bundle": "^1.7.3",
         "symfony/yaml": "^5.0.5",
         "theofidry/alice-data-fixtures": "1.1.2",
