--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "popper.js": "^1.16.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
+        "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2"
     }
