--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,14 @@
         "symfony/validator": "^5.0.5",
         "symfony/webpack-encore-bundle": "^1.7.3",
         "symfony/yaml": "^5.0.5",
-        "theofidry/alice-data-fixtures": "1.1.2",
         "twig/extra-bundle": "^3.0.3",
-        "twig/twig": "^3.0.3"
+        "twig/twig": "^3.0.3",
+        "theofidry/alice-data-fixtures": "1.1.2",
+        "hautelook/alice-bundle": "^2.7.2"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.3",
         "friendsofphp/php-cs-fixer": "^2.16.1",
-        "hautelook/alice-bundle": "^2.7.2",
         "nelmio/api-doc-bundle": "^3.6",
         "symfony/browser-kit": "5.0.*",
         "symfony/maker-bundle": "^1.14.6",
