--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,14 @@
         "twig/extra-bundle": "^3.0.3",
         "twig/twig": "^3.0.3",
         "theofidry/alice-data-fixtures": "1.1.2",
-        "hautelook/alice-bundle": "^2.7.2"
+        "hautelook/alice-bundle": "^2.7.2",
+        "symfony/maker-bundle": "^1.14.6",
+        "nelmio/api-doc-bundle": "^3.6"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.3",
         "friendsofphp/php-cs-fixer": "^2.16.1",
-        "nelmio/api-doc-bundle": "^3.6",
         "symfony/browser-kit": "5.0.*",
-        "symfony/maker-bundle": "^1.14.6",
         "symfony/phpunit-bridge": "^5.0"
     },
     "config": {
