--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
+        "lodash": "^4.17.15",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.0-beta.17",
